--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div>
+      <input
+        type="number"
+        name=""
+        id="taille"
+        placeholder="Entrez votre taille en m"
+        min="0"
+      />
+      <input
+        type="number"
+        name=""
+        id="poids"
+        placeholder="Entrez votre poids en Kg"
+        min="0"
+      />
+    </div>
+
+    <button>Lancer le calcul</button>
+    <h2></h2>
+  </body>
   <script src="./app.js"></script>
 </html>
